# playground

./: .gitignore  README.md  day1.go
AI/CLIP/: .gitignore  README.md  go.py  pyproject.toml
AI/chatgpt/: requirements.txt
AI/danoGPT/: .gitignore  README.md  attention.ipynb  bigram.ipynb  bigram.py  checks.sh  pyproject.toml  utils.py  v2.py
AI/danoGPT/tests/: test_attention.py  test_bigram.py  test_utils.py
AI/diffusion/: README.md  image_to_image.py  pyproject.toml  text_to_image.py  utils.py
AI/huggingface/: .gitignore  README.md  finetune.py  nlp_course.ipynb  pyproject.toml  semanticsearch.ipynb
AI/langchain/: .env.sample  README.md  demo.ipynb  ragger.py  requirements.txt
AI/whisper/: .gitignore  format_transcript.py
AI_models/diffusion/: README.md  image_to_image.py  text_to_image.py
AI_models/whisper/: README.md  requirements.txt  transcribe.py
MERN/: README.md
chatgpt/: .env.sample  README.md  bot.py
cybersec/CSRF/: demo.html  pyproject.toml  server.py
database/MERN/: README.md
database/elastic_search/: .env.sample  README.md  docker-compose.yml
database/elasticsearch/: README.md  docker-compose.yml
database/redis/: README.md  package.json  server.js
database/sqlalchemy/: dbInit.py  mappings.py
day2/: day2.go  day2_test.go
day3/: day3.go  day3_test.go  go.mod
docker/: Dockerfile  README.md  run.sh
geotiff/: 2019-02-25-00_00_2019-02-25-23_59_Sentinel-2_L2A_True_color.tiff  requirements.txt  run.py
go/: .gitignore  README.md  structs.go
go/advent-of-code/: README.md
go/advent-of-code/day1/: day1.go  example.txt
go/advent-of-code/day2/: day2_test.go  go.mod
go/advent-of-code/day3/: README.md  day3.go
go/greetings/: go.mod  greetings.go  greetings_test.go
go/hello/: README.md  go.mod  hello.go
go/spotify/: scrape.go
gtest/: CMakeLists.txt  README.md
js/jwt/: README.md  package.json  requests.rest  server.js
js/mocha-chai-test/: README.md  package.json
js/mocha-chai-test/src/: calculator.js
js/mocha-chai-test/test/: order.js
js/next.js/: package-lock.json
js/next.js/pages/: about.tsx
js/next.js/public/: cars.json
js/nx/: README.md
js/nx/fireship-tut/: README.md  package.json
js/nx/fireship-tut-angular/: README.md  package.json
js/nx/fireship-tutorial/: README.md  package.json
js/react-dnd/: package.json
js/react-dnd/src/: App.tsx
js/react-native/DoneWithIt/: .gitignore  (+1 more)
jwt/: README.md  authServer.js  package.json  requests.rest  server.js
kubernetes/: README.md
kubernetes/mongo-demo/: README.md  mongo-config.yaml  mongo-secret.yaml  mongo.yaml  webapp.yaml
latex/: example.tex  otherfile.tex
linux/LFS/: README.md  version-check.sh
manim/: quickStart.py  requirements.txt
mocha-chai-test/: README.md
mocha-chai-test/tests/: calc.js
next.js/: README.md  package.json
octave/: fibonacci.m  notes.m  tutorial.m
octave/csv_example/: analyze.m
protobuf/: .gitignore  employees.proto  index.js  package.json
python/asyncio/: README.md  script.py
python/celery/: README.md  docker-compose.yml  pyproject.toml
python/celery/src/: Dockerfile  celery.py  celery_setup.py  example_work.py  get_celery.py  pyproject.toml  tasks.py
python/fastapi/: README.md  main.py  pyproject.toml
python/pandas/: answers.py  pandas1.ipynb  pandas2.ipynb
python/parallel_execution/: README.md  greenlets.py  mprocessing.py  mthreading.py  pyproject.toml
python/pytorch/: .gitignore  README.md  practice.ipynb  quickstart.py
react-dnd/: README.md  package-lock.json  package.json
react-dnd/src/: App.css  App.tsx
react-native/DoneWithIt/: .gitignore  App.tsx  app.json  constants.ts  package.json  tsconfig.json
rust/: .gitignore  README.md  main.rs
rust/first_proj/: Cargo.toml
rust/ui/: Cargo.toml  main.rs
sqlalchemy/: .gitignore  dbInit.py  mappings.py
src/: index.js
wikipedia/: .gitignore  README.md  sentences.py
(+19 files in other folders)
