[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = []
#readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torchvision = "^0.21.0"
clip = {git = "https://github.com/openai/CLIP.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
