[project]
name = "diffusion"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "diffusers (>=0.35.2,<0.36.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "accelerate (>=1.11.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
