[tool.poetry]
name = "huggingface_playground"
version = "0.1.0"
description = ""
authors = ["Daniel Engbert <end1@umbc.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = {extras = ["torch"], version = "^4.38.2"}
torch = "^2.2.1"
datasets = "^2.18.0"
evaluate = "^0.4.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
wandb = "^0.16.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
